# pysphinxdoc

./: AUTHORS.rst  CHANGELOG.rst  README.rst  pyproject.toml
.github/workflows/: documentation.yml  linters.yml  pep8.yml  release-documentation.yml
dev/: .buildinfo  authors.html  ci.html  contributing.html  index.html  license.html  maintenance.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  sg_execution_times.html  versions.html  whats_new.html
dev/_downloads/f4ba652866e203946a82af91a821e9df/: docgen.ipynb
dev/_modules/: index.html
dev/_modules/pysphinxdoc/: docgen.html  interface.html  utils.html
dev/_sources/: index.rst.txt  license.rst.txt  sg_execution_times.rst.txt  versions.rst.txt
dev/_sources/auto_examples/: docgen.rst.txt
dev/_sources/modules/: pysphinxdoc.docgen.rst.txt  pysphinxdoc.interface.rst.txt  pysphinxdoc.utils.rst.txt  search.rst.txt
dev/_sources/user_guide/: first_step.rst.txt  requirements.rst.txt
dev/auto_examples/: docgen.html  index.html  sg_execution_times.html
dev/modules/: index.html  pysphinxdoc.docgen.html  pysphinxdoc.interface.html  pysphinxdoc.utils.html  search.html
dev/user_guide/: first_step.html  index.html  requirements.html  what_is.html
doc/: highlights.csv
doc/user_guide/: index.rst
examples/: docgen.py
pysphinxdoc/: __init__.py  docgen.py  interface.py  sphinxdoc  utils.py
pysphinxdoc/resources/: Makefile  ci.jinja  conf.py  contributing.jinja  get_ci_workflows_description.py  get_documentation_description.py  get_index.py  get_versions.py  index.jinja  license.jinja  maintenance.jinja  versions.jinja
pysphinxdoc/resources/default/: CONTRIBUTING  LICENSE  MAINTENANCE
pysphinxdoc/resources/mermaid/: doc_deploy.mmd
pysphinxdoc/resources/sphinxext/: github_links.py
pysphinxdoc/resources/templates/: class.rst  modules.rst  modules_class.rst  modules_function.rst  modules_index.rst  search.rst
stable/: .buildinfo  index.html  license.html  searchindex.js  whats_new.html
stable/_sources/: ci.rst.txt
stable/_sources/auto_examples/: index.rst.txt  sg_execution_times.rst.txt
stable/_sources/modules/: index.rst.txt  pysphinxdoc.interface.rst.txt  pysphinxdoc.utils.rst.txt
stable/_sources/user_guide/: first_step.rst.txt  what_is.rst.txt
stable/auto_examples/: index.html  sg_execution_times.html
stable/modules/: index.html  pysphinxdoc.interface.html  search.html
stable/user_guide/: first_step.html  index.html  requirements.html
