[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pysphinxdoc"
readme = "README.rst"
requires-python = "==3.12.*"
authors = [{name = "pysphinxdoc developers"}]
license = "CECILL-B"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "docutils>=0.17",
    "memory-profiler==0.61.0",
    "furo==2025.7.19",
    "memory_profiler==0.61.0",
    "myst-parser==4.0.1",
    "numpydoc>=1.8.0",
    "ruamel.yaml==0.18.15",
    "sphinx==7.2.6",
    "sphinx-copybutton==0.5.2",
    "sphinx-design==0.6.1",
    "sphinx-gallery==0.19.0",
    "sphinxcontrib-bibtex==2.6.5",
    "sphinxext-opengraph==0.13.0",
    "sphinxcontrib-mermaid==1.0.0",
    "fire"
]
dynamic = ["version"]

[project.scripts]
sphinxdoc = "pysphinxdoc.interface:generate_documentation_main"

[project.urls]
Development = "https://github.com/brainprepdesk/pysphinxdoc"
Tracker = "https://github.com/brainprepdesk/pysphinxdoc/issues"
Homepage = "https://brainprepdesk.github.io/pysphinxdoc"

[tool.setuptools]
platforms = ["Linux", ]
include-package-data = true

[tool.setuptools.package-data]
pysphinxdoc = ["resources/**"]

[tool.setuptools.dynamic]
version = {attr = "pysphinxdoc.__version__"}

[tool.setuptools.packages.find]
exclude = ["doc"]
namespaces = false

[tool.build_sphinx]
source-dir = "doc"
build-dir = "doc/build"
all_files = "1"

[tool.ruff]
indent-width = 4
line-length = 79
extend-exclude = [
    "tests",
    "resources"
]

[tool.ruff.lint]
preview = true
extend-select = [
    "E225", # missing whitespace around operator
    "E261", # at least two spaces before inline comment
    "E222", # multiple spaces after operator
    "W291", # trailing whitespace
    "E501", # `line-too-long` rule
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "SIM",  # flake8-simplify
    "FLY",  # flynt
    "I",    # isort
    "N",    # pep8-naming
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "UP",   # pyupgrade
    "FURB", # refurb
    "RUF",
]
ignore = [
    "FURB101",  # `open` and `read` should be replaced by `Path(path).read_text()`
    "FURB103",  # `open` and `write` should be replaced by `Path(logfile).write_text(code)`
    "SIM102",  # Use a single `if` statement
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "warnings",
    "pass",
    "raise NotImplementedError",
]
